2011-01-12  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16939: ExtJS Tooltip / CSH styling

2011-01-12  Benjamin Mack  <benjamin.mack@typo3.org>

	* Synchronized external repositories of version (tag 4.5.0beta4) and workspaces (tag 4.5.0beta4)

2011-01-12  Oliver Hader  <oliver.hader@typo3.org>

	* Cleanup: Fixed last synchronized targets of external SVN repositories

2011-01-12  Xavier Perseguers  <typo3@perseguers.ch>

	* Follow-up of changeset 9949: Fixed typo in class name

2011-01-12  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16970: Backwards compatibility in PHP_SCRIPT and accessing $this-> methods
	* Fixed bug #16966: be_layout setting "none" is not working and be_layout should not be inherited automatically (Thanks to Jo Hasenau)
	* Added feature #13319: Add plupload support for uploading files in fileadmin

2011-01-11  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16941: Change mask color

2011-01-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16967: [Caching framework] Remove not exising "GlobalsBackend" from config_default.php

2011-01-11  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16878: Make t3lib_utility_Client::getBrowserInfo() aware of more operating systems (Thanks to Andreas Lappe)
	* Fixed bug #16630: migrateWorkspaces in Install-Tool does not work, if extbase is not installed
	* Fixed bug #16961: When the title length is changed in the user setup module the pagetree needs to be updated (Thanks to Stefan Galinski)

2011-01-11  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up to #15853: Add z-index to admin panel

2011-01-10  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16951: [Performance] Speed up makeInstance() by caching getClassName() results
	* Fixed bug #15133: Rendering images with ImageMagick fails to set file permissions (Thanks to Alexander Grein)

2011-01-10  Ernesto Baschny  <ernst@cron-it.de>
